# viktora-threshold

./: .clinerules  .gitattributes  .gitignore  AAR-WP-PLAUD-04a.md  AAR-WP-PLAUD-07b.md  AAR-WP-THRESHOLD-LOG-UX.md  AAR-WP-Threshold-Compact-UX.md  CHANGELOG.md  CLAUDE.md  COMPANION-NETWORK-AS-BUILT-2026-07-15.md  COMPANION-SYSTEM-MAP-v0-2026-07-16.md  DESIGN-GRAMMAR-THRESHOLD-2026-07-20.md  HANDOFF-BETA-SITE-2026-07-08.md  HANDOFF-COMPANION-COHERENCE-2026-07-21.md  HANDOFF-THRESHOLD-2026-07-07.md  HANDOFF-THRESHOLD-UI-2026-07-06.md  HANDOFF-Trisha-WorkForest-Feedback.md  HANDOFF-WORKFOREST-2026-07-17.md  LICENSE  MOCKUPS-THRESHOLD-REVIEW-2026-07-20.html  MOCKUPS-THRESHOLD-UI-2026-07-06.html  MOCKUPS-TODAY-REORG-2026-07-11.html  MOCKUPS-VOICE-ENTRY-AMBIENT-2026-07-20.html  OPERATOR-INVENTORY-2026-07-11.md  ORG-STATE-PRESERVATION.md  PILOT-INSTALL.md  PIXEL-PASS-DEFECTS-2026-07-07.md  PIXEL-PASS-RUBRIC-2026-07-06.md  README.md  RELEASE-CHECKLIST.md  SIGNING.md  SPIKE-FINDINGS-WP-Threshold-Compact-UX-Phase-1.md  USER-GUIDE.md  WEBSITE-SPEC-THRESHOLD-BETA.md  WP-BYOM-BRIEF-2026-07-08.md  WP-CHURN-GATE-DISPATCH-2026-07-13.md  WP-COMPANION-COHERENCE-BRIEF-2026-07-16.md  WP-COMPANION-NETWORK-BRIEF-2026-07-13.md  WP-DATA-LIFECYCLE-BRIEF-2026-07-20.md  WP-DAY-GRAPH-ADDENDUM-2026-07-15.md  (+24 more)
.github/workflows/: ci.yml  release.yml
docs/ratify-assets/: ratify-queue.fixture.json
scripts/: capture-user-guide.mjs
site/: DEPLOY.md  index.html  waitlist-server.mjs
site/assets/: clip-a.webm  clip-b.webm  clip-c.webm  clip-d.webm  hero-loop.webm  hero.webm
skills/: .gitignore  corpus-reconcile.skill
skills/corpus-reconcile/: SKILL.md
skills/corpus-reconcile/references/: hot-list-format.md
src/: brief.css  brief.html  brief.js  call.html  call.js  glass.css  index.html  main.js  routines.js  styles.css  voice-probe.html  widget.css  widget.html  widget.js
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/: proxy-queue.fixture.json
src-tauri/src/: calendar_read.rs  email_follow.rs  flow_package.rs  integration_doctor.rs  lib.rs  main.rs  ocr_mac.rs  ocr_windows.rs  onedrive_mail_sweep.rs  onenote_windows.rs  pdf_extract.rs  plaud_oauth.rs  widget_platform_mac.rs  widget_platform_windows.rs
src-tauri/tests/: plaud_oauth_tests.rs
