[package]
name = "viktora-threshold"
version = "0.1.0"
description = "Viktora Threshold — Mac desktop capture app for Apolla workspaces (WP-OCR-12)"
authors = ["Ross Cantrell"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "viktora_threshold_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for ingest endpoint POSTs (D-12-13: from Rust shell, no Origin header)
# rustls-tls so we don't pull in OpenSSL on macOS
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }

# SHA-256 for deterministic documentId generation (D-OCR-06 / D-ADDIN-05 pattern: prefix + first 16 hex chars)
sha2 = "0.10"
hex = "0.4"

# HOME directory resolution for D-12-19 OCR utility absolute-path probe
dirs = "5"

# ISO 8601 UTC timestamps for sourceMetadata.capturedAt
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Lenient error handling in IPC commands
anyhow = "1"
thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# WP-OCR-13 Phase A — Mac native in-process OCR via Apple Vision framework.
# Replaces the v0.1.x subprocess to `viktora-ocr-capture`. See AC-1, D-13-02.
# objc2-app-kit gives us NSWorkspace.frontmostApplication for sourceApp lookup
# (P-13-09 (c) cross-surface analytics; the orthogonal axis to captureTool).
# tempfile holds the PNG between `screencapture -i` and Vision OCR.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-vision = "0.3"
tempfile = "3"
