[package]
name = "viktora-threshold"
version = "0.3.0"
description = "Viktora Threshold — Mac + Windows desktop capture app for Apolla workspaces (WP-OCR-12 + WP-OCR-13)"
authors = ["Ross Cantrell"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "viktora_threshold_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for ingest endpoint POSTs (D-12-13: from Rust shell, no Origin header)
# rustls-tls so we don't pull in OpenSSL on macOS
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }

# SHA-256 for deterministic documentId generation (D-OCR-06 / D-ADDIN-05 pattern: prefix + first 16 hex chars)
sha2 = "0.10"
hex = "0.4"

# HOME directory resolution for D-12-19 OCR utility absolute-path probe
dirs = "5"

# ISO 8601 UTC timestamps for sourceMetadata.capturedAt
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Lenient error handling in IPC commands
anyhow = "1"
thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# WP-OCR-13 Phase A — Mac native in-process OCR via Apple Vision framework.
# Replaces the v0.1.x subprocess to `viktora-ocr-capture`. See AC-1, D-13-02.
# objc2-app-kit gives us NSWorkspace.frontmostApplication for sourceApp lookup
# (P-13-09 (c) cross-surface analytics; the orthogonal axis to captureTool).
# tempfile holds the PNG between `screencapture -i` and Vision OCR.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-vision = "0.3"
tempfile = "3"

# WP-OCR-13 Phase B — Windows native in-process OCR via Windows.Media.Ocr (AC-1,
# D-13-03). Replaces the v0.1.x subprocess to `viktora-ocr-capture` and adds
# native Windows region UX via `ms-screenclip:` URI (D-13-05). arboard provides
# clipboard read/snapshot/restore — D-13-06 + P-13-01 (a). `windows` crate
# features cover the in-process OCR pipeline plus GetForegroundWindow-based
# sourceApp lookup (P-13-09 (c) orthogonal axis to captureTool):
#   Media_Ocr / Foundation / Foundation_Collections — OcrEngine + IVectorView
#   Storage_Streams / Graphics_Imaging              — PNG → SoftwareBitmap
#   Win32_UI_Shell                                  — ShellExecuteW
#   Win32_UI_WindowsAndMessaging                    — GetForegroundWindow
#   Win32_System_Com                                — CoInitializeEx
#   Win32_System_Threading / Win32_System_ProcessStatus / Win32_Foundation
#                                                   — process → EXE name
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Media_Ocr",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "Graphics_Imaging",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
] }
arboard = "3"
# Minimal PNG encoder for the RGBA → PNG → SoftwareBitmap (BitmapDecoder)
# pipeline (brief Phase B step 2). Lighter than the full `image` crate.
png = "0.17"
